<resources>
    <string name="app_name">myHabits</string>
    <string name="title_home">Accueil</string>
    <string name="title_stats">Stats</string>
    <string name="add">Ajouter</string>
    <string name="title">Titre</string>
    <string name="desc">Description</string>
    <string name="categorie">Catégorie :</string>
    <string name="repetition">Répétition :</string>
    <string name="sport">Sport</string>
    <string name="relaxation">Relaxation</string>
    <string name="cours">Cours</string>
    <string name="rangement">Rangement</string>
    <string name="every">Quotidien</string>
    <string name="hebdo">Hebdomadaire</string>
    <string name="once">Unique</string>
    <string name="overview">Vue d\'ensemble</string>
    <string name="score">Score</string>
    <string name="Month" >Mois</string>
    <string name="Year">Année</string>
    <string name="Total">Total</string>
    <string name="habit_graph_title">Force de l\'habitude</string>
    <string name="Done">Fait :</string>
</resources>
